Bug 1045217 - Use gray for tooltips on 10.10. r=mstange, a=lmandel